2002-05-06  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: Release 0.2.26

2002-05-03  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_alsa09.c: (initAlsa):
	* clients.c:
	* esd.c:
	* esdcat.c:
	* esdfilt.c:
	* esdlib.c: (esd_open_sound):
	* esdmon.c:
	* esdrec.c:
	* genrand.c: (genrand_dev), (genrand_unix):
	fix various warnings and missing includes (bug #80690)

2002-05-01  Rodney Dawes  <dobey@free.fr>

	* Makefile.am: Need to dist getopt*.c even when not needed for build
	
2002-04-29  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* audio_alsa09.c: (initAlsa), (esd_audio_open), (esd_audio_read),
	(esd_audio_write): open sound device in non blocking mode, various 
	cleanup (patch from Santiago Otero <siryurian@terra.es>)

2002-04-27  Frederic Crozat  <fred@crozat.net>

	* mix.c: (mix_stereo_8u_to_stereo_32s_sv):
	fix resampling from 44 to 48kHz (patch from Alexander Motin <mav@alkar.net>). Bug #79299

2002-04-24  Iain <iain@ximian.com>

	* configure.in: Make the if's in the alsa detection elif's

2002-04-23  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: release 0.2.25

2002-04-23  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	* acconfig.h:
	* audio.c:
	* configure.in:
	* esddsp.in: add support for ALSA 0.9 
	(patch from Santiago Otero <siryurian@terra.es>)

2002-04-23  Frederic Crozat <fcrozat@mandrakesoft.com>

	* esddsp.in: use library major number for LD_PRELOAD
	* MAINTAINERS: add myself

2002-04-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* esd.c: (main): remove socket/socket directory before exiting
	when sound device can't be open

2002-03-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: check for gethostbyname2.

	* esd.c: call gethostbyname if gethostbyname2 isn't available.

2002-03-13  chris chabot <chabotc@reviewboard.com>

    * Cleaned up spec file, added .pc file to its file list,
    and added audiofile to dependency list

2002-03-13  jacob berkman  <jacob@ximian.com>
